--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>1.5</version>
+      <version>${project.parent.version}</version>
       <scope>test</scope>
     </dependency>
 
