--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
       <version>${project.parent.version}</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>com.unboundid</groupId>
+      <artifactId>unboundid-ldapsdk</artifactId>
+      <version>2.3.0</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
   
