added basic user interface for connection test

--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -16,6 +16,7 @@
   </packages>
 
   <resources>
+    <script>/sonia/scm/auth/ldap/sonia.ldap.connectiontest.js</script>
     <script>/sonia/scm/auth/ldap/sonia.ldap.js</script>
   </resources>
 
