--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-auth-ldap-plugin</artifactId>
   <packaging>jar</packaging>
-  <version>1.8-SNAPSHOT</version>
+  <version>1.8</version>
   <name>${project.artifactId}</name>
   <description>scm manager auth ldap plugin</description>
 
