#360: added support for multiple LDAPs * We still need to update the unit tests

--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -50,6 +50,7 @@
   <resources>
     <script>/sonia/scm/auth/ldap/sonia.ldap.connectiontest.js</script>
     <script>/sonia/scm/auth/ldap/sonia.ldap.js</script>
+    <script>/sonia/scm/auth/ldap/sonia.ldapconfig.js</script>
   </resources>
 
 </plugin>
