--- a/pom.xml
+++ b/pom.xml
@@ -6,32 +6,25 @@
   <parent>
     <artifactId>scm-plugins</artifactId>
     <groupId>sonia.scm.plugins</groupId>
-    <version>1.7</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-auth-ldap-plugin</artifactId>
-  <packaging>jar</packaging>
-  <version>1.22</version>
+  <packaging>smp</packaging>
+  <version>2.0.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>scm manager auth ldap plugin</description>
 
-  <url>https://bitbucket.org/tludewig/scm-auth-ldap-plugin</url>
+  <url>https://bitbucket.org/scm-manager/scm-auth-ldap-plugin</url>
 
   <scm>
-    <connection>scm:hg:https://bitbucket.org/tludewig/scm-auth-ldap-plugin</connection>
-    <developerConnection>scm:hg:https://bitbucket.org/tludewig/scm-auth-ldap-plugin</developerConnection>
-    <url>https://bitbucket.org/tludewig/scm-auth-ldap-plugin</url>
+    <connection>scm:hg:https://bitbucket.org/scm-manager/scm-auth-ldap-plugin</connection>
+    <developerConnection>scm:hg:https://bitbucket.org/scm-manager/scm-auth-ldap-plugin</developerConnection>
+    <url>https://bitbucket.org/scm-manager/scm-auth-ldap-plugin</url>
   </scm>
 
   <dependencies>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>${servlet.version}</version>
-      <scope>provided</scope>
-    </dependency>
 
     <!-- test scope -->
 
@@ -50,26 +43,6 @@
     </dependency>
     
   </dependencies>
-  
-  <build>
-    <plugins>
-    
-      <plugin>
-        <groupId>sonia.scm.maven</groupId>
-        <artifactId>scm-maven-plugin</artifactId>
-        <version>1.46</version>
-        <executions>
-          <execution>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>fix-descriptor</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    
-    </plugins>
-  </build>
   
   <repositories>
     
