--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plugin SYSTEM "https://download.scm-manager.org/dtd/plugin/2.0.0-01.dtd">
 <!--
 
     Copyright (c) 2010, Sebastian Sdorra
@@ -42,14 +43,4 @@
   <conditions>
     <min-version>${project.parent.version}</min-version>
   </conditions>
-
-  <packages>
-    <package>sonia.scm.auth.ldap</package>
-  </packages>
-
-  <resources>
-    <script>/sonia/scm/auth/ldap/sonia.ldap.connectiontest.js</script>
-    <script>/sonia/scm/auth/ldap/sonia.ldap.js</script>
-  </resources>
-
 </plugin>
