Implement REST endpoint to put configuration

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>5.3.6.Final</version>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- test scope -->
 
     <dependency>
