--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "@scm-manager/scm-auth-ldap-plugin",
+  "name": "@scm-manager/scm-ldap-plugin",
+  "private": true,
+  "version": "2.0.0-SNAPSHOT",
   "license": "BSD-3-Clause",
   "main": "src/main/js/index.js",
   "scripts": {
-    "build": "ui-bundler plugin",
-    "watch": "ui-bundler plugin -w",
-    "lint": "ui-bundler lint",
-    "flow": "flow check"
+    "build": "ui-scripts plugin",
+    "watch": "ui-scripts plugin-watch"
   },
   "dependencies": {
-    "@scm-manager/ui-components": "latest",
-    "@scm-manager/ui-extensions": "^0.1.1",
-    "@scm-manager/ui-types": "latest",
-    "react-i18next": "latest",
-    "react": "latest"
+    "@scm-manager/ui-plugins": "latest"
   },
-  "devDependencies": {
-    "@scm-manager/ui-bundler": "^0.0.24"
+  "babel": {
+    "presets": [
+      "@scm-manager/babel-preset"
+    ]
+  },
+  "jest": {
+    "preset": "@scm-manager/jest-preset"
+  },
+  "prettier": "@scm-manager/prettier-config",
+  "eslintConfig": {
+    "extends": "@scm-manager/eslint-config"
   }
 }
