--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
+  
   <parent>
     <artifactId>scm-plugins</artifactId>
     <groupId>sonia.scm.plugins</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc1</version>
   </parent>
 
-  <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-ldap-plugin</artifactId>
   <packaging>smp</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-rc1</version>
   <name>${project.artifactId}</name>
   <description>Authentication for SCM-Manager using LDAP</description>
 
