--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <artifactId>scm-plugins</artifactId>
     <groupId>sonia.scm.plugins</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc5</version>
   </parent>
 
   <artifactId>scm-ldap-plugin</artifactId>
   <packaging>smp</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-rc2</version>
   <name>${project.artifactId}</name>
   <description>Authentication for SCM-Manager using LDAP</description>
 
