--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
     <repository>
       <id>packages.scm-manager.org</id>
       <name>scm-manager release repository</name>
-      <url>http://packages.scm-manager.org/repository/public/</url>
+      <url>https://packages.scm-manager.org/repository/public/</url>
     </repository>
   
   </repositories>
