--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
   <artifactId>scm-ldap-plugin</artifactId>
   <packaging>smp</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>${project.artifactId}</name>
   <description>Authentication for SCM-Manager using LDAP</description>
 
