--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name" : "@scm-manager/scm-ldap-plugin",
   "private" : true,
-  "version" : "2.1.0-SNAPSHOT",
+  "version" : "2.0.1",
   "license" : "MIT",
   "main" : "./src/main/js/index.ts",
   "scripts" : {
