--- a/build.gradle
+++ b/build.gradle
@@ -28,15 +28,20 @@ plugins {
 }
 
 dependencies {
+  testImplementation "com.github.sdorra:shiro-unit:1.0.1"
   testImplementation "com.unboundid:unboundid-ldapsdk:2.3.0"
 }
 
 scmPlugin {
-  scmVersion = "2.0.0"
+  scmVersion = "2.13.1-SNAPSHOT"
   displayName = "LDAP"
   description = "Authentication for SCM-Manager using LDAP"
   author = "Thorsten Ludewig"
   category = "Authentication"
+
+  run {
+    loggingConfiguration = "src/main/conf/logging.xml"
+  }
 
   openapi {
     packages = [
