--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@scm-manager/scm-ldap-plugin",
     "private": true,
-    "version": "2.3.0",
+    "version": "2.3.1-SNAPSHOT",
     "license": "MIT",
     "main": "./src/main/js/index.ts",
     "scripts": {
