--- a/package.json
+++ b/package.json
@@ -1,59 +1,68 @@
 {
-    "name": "@scm-manager/scm-ldap-plugin",
-    "private": true,
-    "version": "2.5.1-SNAPSHOT",
-    "license": "MIT",
-    "main": "./src/main/js/index.ts",
-    "scripts": {
-        "build": "plugin-scripts build",
-        "watch": "plugin-scripts watch",
-        "postinstall": "plugin-scripts postinstall"
-    },
-    "dependencies": {
-        "@scm-manager/ui-components": "^2.14.0",
-        "@scm-manager/ui-extensions": "^2.14.0",
-        "@scm-manager/ui-plugins": "3.2.3-20240525-044023",
-        "classnames": "^2.2.6",
-        "query-string": "^5.0.1",
-        "react": "^16.10.2",
-        "react-i18next": "^10.13.1",
-        "react-redux": "^5.0.7",
-        "react-router-dom": "^5.1.2",
-        "redux": "^4.0.0",
-        "styled-components": "^5.1.0"
-    },
-    "babel": {
-        "presets": [
-            "@scm-manager/babel-preset"
-        ]
-    },
-    "jest": {
-        "preset": "@scm-manager/jest-preset"
-    },
-    "prettier": "@scm-manager/prettier-config",
-    "eslintConfig": {
-        "extends": "@scm-manager/eslint-config"
-    },
-    "devDependencies": {
-        "@scm-manager/babel-preset": "^2.11.2",
-        "@scm-manager/eslint-config": "^2.12.0",
-        "@scm-manager/jest-preset": "^2.12.7",
-        "@scm-manager/plugin-scripts": "^1.0.2",
-        "@scm-manager/prettier-config": "^2.10.1",
-        "@scm-manager/tsconfig": "^2.11.2",
-        "@scm-manager/ui-tests": "^2.14.0",
-        "@scm-manager/ui-types": "^2.14.0",
-        "@types/classnames": "^2.2.9",
-        "@types/enzyme": "^3.10.3",
-        "@types/fetch-mock": "^7.3.1",
-        "@types/i18next": "^13.0.0",
-        "@types/jest": "^24.0.19",
-        "@types/query-string": "5",
-        "@types/react": "^16.9.9",
-        "@types/react-redux": "5.0.7",
-        "@types/react-router-dom": "^5.1.0",
-        "@types/styled-components": "^5.1.0",
-        "jest": "^24.9.0",
-        "@scm-manager/ui-scripts": "^2.14.0"
-    }
+  "name": "@scm-manager/scm-ldap-plugin",
+  "private": true,
+  "version": "2.5.1-SNAPSHOT",
+  "license": "MIT",
+  "main": "./src/main/js/index.ts",
+  "scripts": {
+    "build": "plugin-scripts build",
+    "watch": "plugin-scripts watch",
+    "postinstall": "plugin-scripts postinstall"
+  },
+  "dependencies": {
+    "@scm-manager/ui-components": "3.3.0",
+    "@scm-manager/ui-extensions": "3.3.0",
+    "@scm-manager/ui-plugins": "3.3.0",
+    "classnames": "^2.2.6",
+    "query-string": "6.14.1",
+    "react": "17",
+    "react-i18next": "11",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^5.3.1",
+    "redux": "^4.0.0",
+    "styled-components": "^5.3.5",
+    "react-dom": "17",
+    "react-router": "^5.3.1",
+    "@scm-manager/ui-api": "3.3.0",
+    "@scm-manager/ui-forms": "3.3.0",
+    "@scm-manager/ui-buttons": "3.3.0",
+    "@scm-manager/ui-overlays": "3.3.0",
+    "@scm-manager/ui-layout": "3.3.0",
+    "react-hook-form": "^7.5.1",
+    "react-query": "^3.25.1"
+  },
+  "babel": {
+    "presets": [
+      "@scm-manager/babel-preset"
+    ]
+  },
+  "jest": {
+    "preset": "@scm-manager/jest-preset"
+  },
+  "prettier": "@scm-manager/prettier-config",
+  "eslintConfig": {
+    "extends": "@scm-manager/eslint-config"
+  },
+  "devDependencies": {
+    "@scm-manager/babel-preset": "^2.13.1",
+    "@scm-manager/eslint-config": "^2.17.0",
+    "@scm-manager/jest-preset": "^2.13.0",
+    "@scm-manager/plugin-scripts": "^1.2.2",
+    "@scm-manager/prettier-config": "^2.10.1",
+    "@scm-manager/tsconfig": "^2.13.0",
+    "@scm-manager/ui-tests": "3.3.0",
+    "@scm-manager/ui-types": "3.3.0",
+    "@types/classnames": "^2.2.9",
+    "@types/enzyme": "^3.10.3",
+    "@types/fetch-mock": "^7.3.1",
+    "@types/i18next": "^13.0.0",
+    "@types/jest": "^24.0.19",
+    "@types/query-string": "5",
+    "@types/react": "^17.0.1",
+    "@types/react-redux": "5.0.7",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
+    "jest": "^24.9.0",
+    "@scm-manager/ui-scripts": "^2.14.0"
+  }
 }
