Prepare for next development iteration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@scm-manager/scm-ldap-plugin",
     "private": true,
-    "version": "3.1.0",
+    "version": "3.1.1-SNAPSHOT",
     "license": "AGPL-3.0-only",
     "main": "./src/main/js/index.ts",
     "scripts": {
